@@ -503,6 +503,9 @@ src/Filters/Rules/Family/_MotherHasNameOf.py
 src/Filters/Rules/Family/_ChildHasIdOf.py
 src/Filters/Rules/Family/_FatherHasNameOf.py
 src/Filters/Rules/Family/_ChildHasNameOf.py
+src/Filters/Rules/Family/_SearchFatherName.py
+src/Filters/Rules/Family/_SearchChildName.py
+src/Filters/Rules/Family/_SearchMotherName.py
 
 # Filters.Rules.Event package
 src/Filters/Rules/Event/_MatchesFilter.py
