@@ -26,6 +26,10 @@ Package providing filter rules for GRAMPS.
 
 __author__ = "Don Allingham"
 
+from _SearchFatherName import SearchFatherName
+from _SearchMotherName import SearchMotherName
+from _SearchChildName import SearchChildName
+
 from _HasRelType import HasRelType
 from _AllFamilies import AllFamilies
 from _HasIdOf import HasIdOf
